syntax = "proto3";

package rivet.backend.pkg.mm.msg.lobby_find_complete;

import "proto/common.proto";

/// name = "msg-mm-lobby-find-complete"
/// deduplicate = true
/// parameters = [
/// 	{ name = "namespace_id" },
/// 	{ name = "query_id" },
/// ]
message Message {
	rivet.common.Uuid namespace_id = 1;
	rivet.common.Uuid query_id = 2;
	rivet.common.Uuid lobby_id = 3;
	repeated rivet.common.Uuid player_ids = 4;
}

